--- a/components/meals.jade
+++ b/components/meals.jade
@@ -95,7 +95,7 @@ template(name='reservations')
             .label slots available
         .ui.small.statistic
             .value 
-                i.dollar.icon
+                i.dollar.grey.icon
                 |#{money_earned}     
             .label money earned
         
