--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -126,10 +126,11 @@ template(name='big_user_card')
         .ui.card
             .image
                 img.ui.image(src="{{c.url image_id width=300 height=300 gravity='face' crop='fill'}}")
-            a.content(href="/user/#{username}")
-                .header #{first_name} #{last_name} 
-                .meta @#{username}
-                //- +array_view key='tags' label='Tags' direct=true
+            .content
+                a.header(href="/user/#{username}")
+                     |#{first_name} #{last_name} 
+                    .meta @#{username}
+                    //- +array_view key='tags' label='Tags' direct=true
             if is_staff
                 .content
                     +text_view key='address' label='address' direct=true
@@ -194,9 +195,9 @@ template(name='creation_info')
 
 template(name='user_list_toggle')
     if currentUser
-        .ui.icon.basic.button.toggle(class=user_list_toggle_class title=label)
+        .ui.icon.compact.button.toggle(class=user_list_toggle_class title=label)
             //- i.icon(class=icon)
-            +i name=icon
+            +ismall name=icon classes='ui inline image'
             //- |#{label}
         //- each list_users
         //-     +user_info
