--- a/client/fields.jade
+++ b/client/fields.jade
@@ -83,8 +83,8 @@ template(name='i')
     //- img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=classes title=title)
 
 template(name='ismall')
-    //- img(src="https://img.icons8.com/color/24/000000/#{name}.png" class=classes title=title)
-    img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
+    img(src="https://img.icons8.com/office/24/000000/#{name}.png" class=classes title=title)
+    //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
 
 template(name='iblue')
     img(src="https://img.icons8.com/ultraviolet/40/000000/#{name}.png" class=classes)
@@ -227,18 +227,21 @@ template(name='image_link_view')
 
 
 template(name='textarea_view')
-    //- .ui.unstyled.accordion
-    //-     .active.title
-    //-         |content
-    if title
-        |#{title}: 
-    else if key
-        |#{key}
-    //-         i.dropdown.icon
-    //-     .active.content
     if field_value
+        div
+        .ui.inline.small.header
+            if icon
+                +i name=icon
+                //- i.icon(class=icon)
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            else if key
+                |#{key}
+            else
+                |#{this}            
         |{{nl2br field_value}}
-        //- +call_watson mode='text' key=key
 
 template(name='textarea_edit')
     .ui.form
@@ -280,12 +283,16 @@ template(name='html_edit')
         
         
 template(name='html_view')
-    //- .ui.accordion
-    //-     .active.title
-    //-         large content
-    //-         i.dropdown.icon
-    //-     .active.content
-    .ui.hidden.divider
+    if field_value
+        if icon
+            +i name=icon
+            //- i.icon(class=icon)
+        if title
+            |#{title}
+        else if key
+            |#{key}
+        else
+            |#{this}
     |!{field_value}
     //- +call_watson mode='html'
     //- if watson
@@ -484,20 +491,21 @@ template(name='date_edit')
 
 
 template(name='date_view')
-    div
-    .ui.small.inline.header
-        if icon
-            +i name=icon
-            //- i.icon(class=icon)
-        if title
-            |#{title}
-        else if label
-            |#{label}
-        else if key
-            |#{key}
-        else
-            |#{this}
-    strong &nbsp; #{field_value}
+    if field_value
+        div
+        .ui.small.inline.header
+            if icon
+                +i name=icon
+                //- i.icon(class=icon)
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            else if key
+                |#{key}
+            else
+                |#{this}
+        strong &nbsp; #{field_value}
 
 
 
@@ -574,6 +582,7 @@ template(name='array_edit')
                 
 template(name='array_view')
     if field_value
+        div
         .ui.inline.small.header
             if icon
                 +i name=icon
@@ -590,14 +599,15 @@ template(name='array_view')
 
 
 template(name='children_edit')
-    div
-    .ui.inline.header 
-        |#{title}
-    .ui.icon.large.circular.button.add_child(title="Add Child #{ref_model}")
-        i.plus.icon
-    //- .ui.styled.fluid.accordion
-    each children
-        +child_edit
+    if children
+        div
+        .ui.inline.header 
+            |#{title}
+        .ui.icon.large.circular.button.add_child(title="add child #{ref_model}")
+            i.plus.icon
+        //- .ui.styled.fluid.accordion
+        each children
+            +child_edit
 
 
 template(name='child_edit')
@@ -816,41 +826,54 @@ template(name='multi_doc_edit')
             if icon
                 +i name=icon classes='ui avatar image'
                 //- i.icon(class=icon)
-            |#{title}
-    // .ui.sub.header 
-    //     if icon
-    //         i.icon(class=icon)
-    //     |#{title}
-    // select.ui.fluid.multiple.selection.dropdown(multiple='')
-    //     each choices
-    //         option(value=slug) #{title}
-    // .ui.fluid.multiple.selection.dropdown
-    //- // input(type='hidden' name='multi_doc_edit')
-    //- // i.dropdown.icon
-    //- // .default.text 
-    //- //     |#{title}
-    //- // .menu
-    //- //     each choices
-    //- //         .item(data-value=slug) 
-    //- //             if icon
-    //- i.icon(class=icon)
-    //- //             |#{title}
+            //- |#{title} #{slug}
+            |#{slug}
+    //- .ui.sub.header 
+    //-     if icon
+    //-         i.icon(class=icon)
+    //-     |#{title}
+    //- select.ui.fluid.multiple.selection.dropdown(multiple='')
+    //-     each choices
+    //-         option(value=slug) #{title} #{unit_number}
+    //- .ui.fluid.multiple.selection.dropdown
+    //-  // input(type='hidden' name='multi_doc_edit')
+    //-  // i.dropdown.icon
+    //-  // .default.text 
+    //-  //     |#{title}
+    //-  // .menu
+    //-  //     each choices
+    //-  //         .item(data-value=slug) 
+    //-  //             if icon
+    //-  i.icon(class=icon)
+    //-  //             |#{title}
 
     
+
+template(name='single_unit_edit')
+    .ui.header single unit lookup
+    
+    
+    
+    
+    
+    
+template(name='multiple_unit_edit')
+    .ui.header multiple unit lookup
     
     
     
 
 template(name='multi_doc_view')
-    if icon
-        +ismall name=icon classes='ui avatar image'
-        //- i.icon(class=icon)
-    .ui.inline.header(title=key)
-        |#{title}
-    each field_value
-        .ui.basic.label
-            |#{this}
-    div
+    if field_value
+        div
+        if icon
+            +ismall name=icon classes='ui avatar image'
+            //- i.icon(class=icon)
+        .ui.inline.header(title=key)
+            |#{title}
+        each field_value
+            .ui.basic.label
+                |#{this}
 
 
 
@@ -954,37 +977,37 @@ template(name='single_person_edit')
 
 
 template(name='multi_user_edit')
-    .ui.form
-        .ui.small.inline.header
-            if icon
-                +i name=icon
-                //- i.icon(class=icon)
-            if title
-                |#{title}
-            else if label
-                |#{label}
-            else if key
-                |#{key}
-            else
-                |#{this}
-            input#multi_user_select_input(type='text' placeholder="lookup #{role_filter}...")
-            each selections
-                .ui.large.label
-                    |#{username} #{first_name} #{last_name}
-        if user_results
-            .ui.top.attached.segment
-                .ui.middle.aligned.selection.animated.list
-                    each user_results
-                        .select_user.item
-                            h5.ui.header
-                                img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-                                strong #{first_name} #{last_name}
-                                small #{username}
-        +clear_value                
-        .ui.list
-            each field_value
-                // |#{this}
-                +user_card
+    .ui.small.inline.header
+        if icon
+            +i name=icon
+            //- i.icon(class=icon)
+        if title
+            |#{title}
+        else if label
+            |#{label}
+        else if key
+            |#{key}
+        else
+            |#{this}
+    .ui.input
+        input#multi_user_select_input(type='text' placeholder="lookup #{role_filter}...")
+    each selections
+        .ui.large.label
+            |#{username} #{first_name} #{last_name}
+    if user_results
+        .ui.top.attached.segment
+            .ui.middle.aligned.selection.animated.list
+                each user_results
+                    .select_user.item
+                        h5.ui.header
+                            img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                            strong #{first_name} #{last_name}
+                            small #{username}
+    +clear_value                
+    .ui.list
+        each field_value
+            // |#{this}
+            +user_card
                 //- with user_from_id
                 //-     .item
                 //-         .right.floated.content
