--- a/client/profile.jade
+++ b/client/profile.jade
@@ -121,7 +121,7 @@ template(name='user_healthclub')
     
 template(name='user_about')
     img.ui.fluid.rounded.image(src="{{c.url banner_image_id width=1000 height=200 crop='crop'}}")
-    .ui.grid
+    .ui.stackable.grid
         .three.column.row
             .column
                 if user_is_resident
@@ -291,7 +291,7 @@ template(name='user_key')
                 +number_view key='tag_number' label='tag number' direct=true
             if is_staff
                 if viewing_code
-                    .ui.huge.label
+                    .ui.huge.orange.label
                         +number_view key='tag_number' label='tag number' direct=true
                 else
                     .ui.icon.button.view_code
