--- a/client/nav.jade
+++ b/client/nav.jade
@@ -25,14 +25,14 @@ template(name='nav')
                         +i name='groups'
                         .mobile.hidden &nbsp; users
                 if is_resident_or_user        
-                    a.item(href='/meals' class="{{isActivePath '/meals'}}" title='meals')
-                        //- i.food.large.icon
-                        +i name='food'
-                        .mobile.hidden &nbsp; meals
-                    //- a.item.set_meal(href='/m/meal' class="{{isActivePath '/m/meal'}}" title='meals')
+                    //- a.item(href='/meals' class="{{isActivePath '/meals'}}" title='meals')
                     //-     //- i.food.large.icon
                     //-     +i name='food'
                     //-     .mobile.hidden &nbsp; meals
+                    a.item.set_meal(href='/m/meal' class="{{isActivePath '/m/meal'}}" title='meals')
+                        //- i.food.large.icon
+                        +i name='food'
+                        .mobile.hidden &nbsp; meals
                 //- if is_admin
                 //-     a.icon.item(href='/alpha' class="{{isActivePath '/alpha'}}")
                 //-         +i name='alpha'
