--- a/components/meals.jade
+++ b/components/meals.jade
@@ -165,6 +165,10 @@ template(name='meal_view')
             .four.wide.column
                 with current_doc
                     +voting
+                    .ui.header similar meals
+                    .ui.header alerts
+                    |alergen alert
+                    |#{alergen_alert}
 
 
 
