--- a/client/styles.css
+++ b/client/styles.css
@@ -68,26 +68,31 @@ body {
 
 
 input{
-    -webkit-border-radius: 10px !important; */
+    -webkit-border-radius: 15px !important; */
+    border-radius: 15px !important;
+    margin-bottom: 3px !important;
+    margin-top: 3px !important;
     /* -moz-border-radius: 50px !important; */
     /* border-radius: 50px !important;
-}
-
- {
-    margin-bottom: 20px !important;
     /* -webkit-border-radius: 10px !important; */
     /* -moz-border-radius: 10px !important; */
-    /* border-radius: 10px !important; */
-    box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.1) !important;
     opacity: .9;
 }
+
+input:focus {
+    background: rgba(100, 100, 100, 0.1) !important;
+    border-width: medium !important;
+    box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.1) !important;
+}
+
+
 .shadowed{
     box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.2) !important;
 }
 .button, .segment, .label{
     /* -webkit-border-radius: 10px !important; */
     /* -moz-border-radius: 10px !important; */
-    border-radius: 10px !important;
+    border-radius: 15px !important;
 }
 
 
