--- a/client/client.jade
+++ b/client/client.jade
@@ -18,6 +18,7 @@ head
     script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
     script(src='https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js')
     // script(src="http://cdn.dhtmlx.com/edge/dhtmlx.js" type="text/javascript") */
+    script(src="https://js.stripe.com/v3/")
 
 
 template(name='layout')
